# CORE

HuRo/: CMakeLists.txt  controller_config.yml  package.xml  setup.py  torque_control_config.yaml
HuRo/HuRo/: excavator_03.SLDASM.csv  excavator_03.urdf  simple_excavator.xml
HuRo/launch/: display.launch  gazebo.launch  spawn_robot.launch.py  terracore.launch.py
HuRo/resource/: excavator_03.sdf  model.config
HuRo/resource/meshes/: FR_wheel_link.STL  base_link.STL  upper_structure_link.STL
HuRo/resource/worlds/sand_heightmap_world/: sand_heightmap_world.config  sand_heightmap_world.sdf
HuRo/scripts/: auto_terra.py  effort_bridge.py  gui2effort.py  joint_state_bridge.py  manualPLUSauto.py  setup.cfg  setup.py
install/: local_setup.sh  setup.sh
install/mycobot_description/share/mycobot_description/: local_setup.sh  package.sh
install/mycobot_gazebo/lib/mycobot_gazebo/: example_joint_trajectory_publisher_cpp
install/mycobot_gazebo/share/ament_index/resource_index/package_run_dependencies/: mycobot_gazebo
install/mycobot_gazebo/share/mycobot_gazebo/: local_setup.sh  package.sh
install/mycobot_gazebo/share/mycobot_gazebo/config/: excavator_controllers.yaml  mycobot_280_controllers.yaml
install/mycobot_gazebo/share/mycobot_gazebo/launch/: mycobot_280_arduino_bringup_ros2_control_classic_gazebo.launch_241121_01.py
install/mycobot_gazebo/share/mycobot_gazebo/urdf/ros2_control/classic_gazebo/: excavator_03.SLDASM.urdf
install/mycobot_gazebo/share/mycobot_gazebo/urdf/ros2_control/classic_gazebo/meshes/: BL_wheel_link.STL  arm_link_1.STL  terracore_link_2.STL
install/mycobot_interfaces/include/mycobot_interfaces/mycobot_interfaces/srv/detail/: get_planning_scene__functions.c  get_planning_scene__functions.h  get_planning_scene__rosidl_typesupport_introspection_cpp.hpp  get_planning_scene__struct.h  get_planning_scene__struct.hpp  get_planning_scene__type_support.c
install/mycobot_interfaces/local/lib/python3.10/dist-packages/mycobot_interfaces/: _mycobot_interfaces_s.ep.rosidl_typesupport_c.c
install/mycobot_interfaces/local/lib/python3.10/dist-packages/mycobot_interfaces/srv/: __init__.py
install/mycobot_interfaces/share/ament_index/resource_index/parent_prefix_path/: mycobot_interfaces
install/mycobot_interfaces/share/ament_index/resource_index/rosidl_interfaces/: mycobot_interfaces
install/mycobot_interfaces/share/mycobot_interfaces/: package.sh
install/mycobot_interfaces/share/mycobot_interfaces/cmake/: export_mycobot_interfaces__rosidl_generator_cppExport.cmake  export_mycobot_interfaces__rosidl_generator_pyExport.cmake  export_mycobot_interfaces__rosidl_typesupport_fastrtps_cExport.cmake  export_mycobot_interfaces__rosidl_typesupport_fastrtps_cppExport.cmake  mycobot_interfaces__rosidl_typesupport_cppExport.cmake  mycobot_interfaces__rosidl_typesupport_introspection_cppExport.cmake
install/mycobot_interfaces/share/mycobot_interfaces/srv/: GetPlanningScene_Response.msg
log/: latest_build
src/mycobot_ros2/mycobot_gazebo/urdf/ros2_control/classic_gazebo/meshes/: BR_wheel_link.STL  FL_wheel_link.STL  arm_link_2.STL  terracore_link_1.STL  terracore_link_3.STL
